Fixed NavBar spacing for the newLogo

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ h6 {
 --------------------------------------------------------------*/
 
 #header {
-  padding: 30px 0;
+  padding: 20px 0;
   height: 100px;
   position: fixed;
   left: 0;
@@ -127,7 +127,7 @@ h6 {
 #header.header-fixed {
   background: rgba(255, 255, 255, 0.9);
   padding: 10px 0;
-  height: 70px;
+  height: 85px;
   transition: all 0.5s;
 }
 
@@ -228,9 +228,10 @@ h6 {
 
 .nav-menu,
 .nav-menu * {
-  margin-top: 1px;
+  
   padding: 0;
   list-style: none;
+  font-size: 2rem;
 }
 
 .nav-menu ul {
